# stm32f3-leds

./: Cargo.toml  README.md
auxiliary/src/: lib.rs
src/: main.rs
src/auxiliary/: Cargo.toml
