[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Christopher J. McClellan <chris.mcclellan203@gmail.com>",
    "Wink Saville <wink@saville.com",
]
edition = "2018"
name = "aux5"
version = "0.2.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
stm32f3-discovery = { git = "https://github.com/nicolasbauw/stm32f3-discovery", branch = "master" }
panic-itm = "0.4.2"